# marv_ws

./: .gitignore  .gitmodules  INSTRUCTIONS.md  LICENSE  PREQUAL.md  README.md  VISION_PREQUAL.md  setup_hardware_rules.sh  setup_uart_permissions.sh  start_mavlink_router.sh  start_telemetry_bridge.sh
scripts/: arm_vehicle.sh  bench_fcu_stack.sh  build_pool_gate_dataset.py  check_explorehd.sh  check_ping_usb.sh  ensure_gazebo.sh  ensure_mavros.sh  ensure_numpy1.sh  free_ping_port.sh  gz_plugin_path_setup.sh  gz_unpause_world.sh  install_marv_worlds.sh  install_python_packages.sh  install_sim_worlds.sh  launch_bench_tv_desktop.sh  launch_prequal_desktop.sh  marv_startup.sh  pwm_test.sh  resolve_serial_devices.sh  run_bench_range_sim.sh  run_bench_tv.sh  run_gazebo_prequal.sh  run_prequal.sh  run_prequal_hardcoded.sh  run_prequal_pool.sh  setup_bb_worlds_assets.sh  start_ardusub_sitl.sh  stop_marv_thrusters.sh  sync_install.sh  test_prequal_stack.sh  test_sitl_json_link.sh  (+6 more)
src/marv_bringup/: package.xml  setup.cfg  setup.py
src/marv_bringup/config/: camera_front.yaml  marv.yaml  mavros_config.yaml  mavros_pluginlists.yaml  prequal_cv.yaml
src/marv_bringup/config/plans/: bench_plan.yaml  bench_tv_plan.yaml  competition_plan.yaml  prequal_plan.yaml
src/marv_bringup/launch/: ardusub.launch.py  competition_bringup.launch.py  control.launch.py  mapping.launch.py  marv_bringup.launch.py  mavros.launch.py  mission_planner.launch.py  ping.launch.py  prequal_bringup.launch.py  sim_bringup.launch.py  unity_hil_bridge.launch.py  vision.launch.py
src/marv_bringup/marv_bringup/: bench_range_sim.py  fcu_setup_node.py  mavlink_ping_bridge.py  mavros_topics.py  serial_devices.py
src/marv_mapping/: package.xml  setup.cfg  setup.py
src/marv_mapping/marv_mapping/: mapping_node.py
src/marv_mapping/marv_mapping/auv_mapping/: __init__.py  compass.py  constants.py  coordinate_transform.py  landmarks.py  localization.py  map_io.py  mapping.py  occupancy_grid.py  sensor_buffer.py  types.py  utils.py
src/marv_mapping/test/: test_mapping_import.py
src/marv_worlds/: CMakeLists.txt  package.xml
src/marv_worlds/hooks/: resource_paths.dsv.in  resource_paths.sh
src/marv_worlds/launch/: gazebo_prequal_sim.launch.py  gazebo_world.launch.py
src/marv_worlds/models/marv_auv/: model.config  model.sdf
src/marv_worlds/models/marv_auv_simple/: model.config  model.sdf
src/marv_worlds/models/marv_bb_pillar/: model.config  model.sdf
src/marv_worlds/models/marv_gate/: model.config  model.sdf
src/marv_worlds/models/marv_home_buoy/: model.config  model.sdf
src/marv_worlds/models/marv_path_marker/: model.config  model.sdf
src/marv_worlds/models/marv_pool/: model.config  model.sdf
src/marv_worlds/models/marv_prequal_course/: model.config  model.sdf
src/marv_worlds/models/marv_prequal_course_bb/: model.config  model.sdf
src/marv_worlds/models/marv_yellow_pole/: model.config  model.sdf
src/marv_worlds/scripts/: build_marv_auv_model.py  generate_worlds.py  gz_clock_bridge.py  gz_image_bridge.py  gz_pose_bridge.py  gz_spawn_with_retry.py
src/marv_worlds/worlds/: marv_competition.world  marv_pool.world  marv_pool_simple.world  marv_prequal.world  marv_prequal_full.world  marv_prequal_sim.world  marv_prequal_simple.world  marv_sitl_test.world  marv_task_approach_marker.world  marv_task_circle_marker.world  marv_task_circle_marker_simple.world  marv_task_depth_hold.world  marv_task_detect_path.world  marv_task_find_gate.world  marv_task_find_gate_simple.world  marv_task_find_marker.world  marv_task_find_return_gate.world  marv_task_hold.world  marv_task_pass_gate.world  marv_task_pass_gate_clear.world  marv_task_return_home.world  marv_task_transit.world  marv_task_traverse_gate.world  marv_task_traverse_gate_simple.world  marv_task_turn_around.world  marv_task_wait_submerged.world  mission_world_map.yaml
(+110 files in other folders)
