<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marv_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for the Marv AUV ROS 2 stack</description>
  <maintainer email="dragontomb35782@gmail.com">eagleauv</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <depend>marv_ardusub</depend>
  <depend>marv_control</depend>
  <depend>marv_vision</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
