<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marv_mapping</name>
  <version>0.0.0</version>
  <description>Landmark mapping and dead-reckoning fusion for Marv AUV (vendored auv_mapping).</description>
  <maintainer email="dragontomb35782@gmail.com">eagleauv</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>marv_vision</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
