<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marv_worlds</name>
  <version>0.1.0</version>
  <description>Gazebo worlds for Marv mission tasks and RoboSub pre-qual (based on bb_worlds layout).</description>
  <maintainer email="eagleauv@todo.todo">EagleAUV</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>marv_bringup</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>python3-gz-transport13</exec_depend>
  <exec_depend>python3-gz-msgs10</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
